// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/team/TeamMembers should match snapshot 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="teamMembers"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Members
        </h3>
        <div
          class="mt-2"
        >
          A list of users who are currently in the team right now
        </div>
      </div>
      <div
        class="button"
      >
        <button
          class="style--none btn btn-primary"
          id="addTeamMembers"
        >
          Add Members
        </button>
      </div>
    </div>
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Role
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_guest"
                        name="system_guest"
                        type="checkbox"
                      />
                      Guest
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_user"
                        name="team_user"
                        type="checkbox"
                      />
                      Member
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_admin"
                        name="team_admin"
                        type="checkbox"
                      />
                      Team Admin
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_admin"
                        name="system_admin"
                        type="checkbox"
                      />
                      System Admin
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
        style="min-height: 240px;"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGrid-footer"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGrid-footer-paginationInfo"
          >
            1 - 3 of 3
          </span>
          <button
            aria-label="Previous page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 ml-2 prev"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-label="Next page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 next"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamMembers should match snapshot loading no users 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="teamMembers"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Members
        </h3>
        <div
          class="mt-2"
        >
          A list of users who are currently in the team right now
        </div>
      </div>
      <div
        class="button"
      >
        <button
          class="style--none btn btn-primary"
          id="addTeamMembers"
        >
          Add Members
        </button>
      </div>
    </div>
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Role
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_guest"
                        name="system_guest"
                        type="checkbox"
                      />
                      Guest
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_user"
                        name="team_user"
                        type="checkbox"
                      />
                      Member
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_admin"
                        name="team_admin"
                        type="checkbox"
                      />
                      Team Admin
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_admin"
                        name="system_admin"
                        type="checkbox"
                      />
                      System Admin
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
        />
        <div
          class="DataGrid_cell"
        />
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
        style="min-height: 0px;"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;
